@@ -5,7 +5,7 @@
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  *  Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -38,7 +38,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
-import org.springframework.asm.Attribute;
 import org.springframework.asm.Type;
 
 /**
@@ -63,9 +62,9 @@ public class ReflectUtils {
 
 	private static final Method classLoaderDefineClassMethod;
 
-	private static final ProtectionDomain PROTECTION_DOMAIN;
-
 	private static final Throwable THROWABLE;
+
+	private static final ProtectionDomain PROTECTION_DOMAIN;
 
 	private static final List<Method> OBJECT_METHODS = new ArrayList<Method>();
 
@@ -73,7 +72,6 @@ public class ReflectUtils {
 		Method privateLookupIn;
 		Method lookupDefineClass;
 		Method classLoaderDefineClass;
-		ProtectionDomain protectionDomain;
 		Throwable throwable = null;
 		try {
 			privateLookupIn = (Method) AccessController.doPrivileged(new PrivilegedExceptionAction() {
@@ -102,39 +100,37 @@ public class ReflectUtils {
 							String.class, byte[].class, Integer.TYPE, Integer.TYPE, ProtectionDomain.class);
 				}
 			});
-			protectionDomain = getProtectionDomain(ReflectUtils.class);
-			AccessController.doPrivileged(new PrivilegedExceptionAction() {
-				public Object run() throws Exception {
-					Method[] methods = Object.class.getDeclaredMethods();
-					for (Method method : methods) {
-						if ("finalize".equals(method.getName())
-								|| (method.getModifiers() & (Modifier.FINAL | Modifier.STATIC)) > 0) {
-							continue;
-						}
-						OBJECT_METHODS.add(method);
-					}
-					return null;
-				}
-			});
 		}
 		catch (Throwable t) {
 			privateLookupIn = null;
 			lookupDefineClass = null;
 			classLoaderDefineClass = null;
-			protectionDomain = null;
 			throwable = t;
 		}
+
 		privateLookupInMethod = privateLookupIn;
 		lookupDefineClassMethod = lookupDefineClass;
 		classLoaderDefineClassMethod = classLoaderDefineClass;
-		PROTECTION_DOMAIN = protectionDomain;
 		THROWABLE = throwable;
+		PROTECTION_DOMAIN = getProtectionDomain(ReflectUtils.class);
+
+		AccessController.doPrivileged(new PrivilegedAction() {
+			public Object run() {
+				Method[] methods = Object.class.getDeclaredMethods();
+				for (Method method : methods) {
+					if ("finalize".equals(method.getName())
+							|| (method.getModifiers() & (Modifier.FINAL | Modifier.STATIC)) > 0) {
+						continue;
+					}
+					OBJECT_METHODS.add(method);
+				}
+				return null;
+			}
+		});
 	}
 	// SPRING PATCH END
 
-	private static final String[] CGLIB_PACKAGES = {
-			"java.lang",
-	};
+	private static final String[] CGLIB_PACKAGES = {"java.lang"};
 
 	static {
 		primitives.put("byte", Byte.TYPE);
@@ -260,7 +256,7 @@ public class ReflectUtils {
 		while ((index = className.indexOf("[]", index) + 1) > 0) {
 			dimensions++;
 		}
-		StringBuffer brackets = new StringBuffer(className.length() - dimensions);
+		StringBuilder brackets = new StringBuilder(className.length() - dimensions);
 		for (int i = 0; i < dimensions; i++) {
 			brackets.append('[');
 		}
@@ -336,7 +332,15 @@ public class ReflectUtils {
 	public static Constructor getConstructor(Class type, Class[] parameterTypes) {
 		try {
 			Constructor constructor = type.getDeclaredConstructor(parameterTypes);
-			constructor.setAccessible(true);
+			if (System.getSecurityManager() != null) {
+				AccessController.doPrivileged((PrivilegedAction<Object>) () -> {
+					constructor.setAccessible(true);
+					return null;
+				});
+			}
+			else {
+				constructor.setAccessible(true);
+			}
 			return constructor;
 		}
 		catch (NoSuchMethodException e) {
@@ -486,12 +490,16 @@ public class ReflectUtils {
 		return defineClass(className, b, loader, protectionDomain, null);
 	}
 
-	@SuppressWarnings("deprecation")  // on JDK 9
+	@SuppressWarnings({"deprecation", "serial"})
 	public static Class defineClass(String className, byte[] b, ClassLoader loader,
 			ProtectionDomain protectionDomain, Class<?> contextClass) throws Exception {
 
 		Class c = null;
-		if (contextClass != null && privateLookupInMethod != null && lookupDefineClassMethod != null) {
+		Throwable t = THROWABLE;
+
+		// Preferred option: JDK 9+ Lookup.defineClass API if ClassLoader matches
+		if (contextClass != null && contextClass.getClassLoader() == loader &&
+				privateLookupInMethod != null && lookupDefineClassMethod != null) {
 			try {
 				MethodHandles.Lookup lookup = (MethodHandles.Lookup)
 						privateLookupInMethod.invoke(null, contextClass, MethodHandles.lookup());
@@ -505,16 +513,39 @@ public class ReflectUtils {
 				// in case of plain LinkageError (class already defined)
 				// or IllegalArgumentException (class in different package):
 				// fall through to traditional ClassLoader.defineClass below
+				t = target;
 			}
 			catch (Throwable ex) {
 				throw new CodeGenerationException(ex);
 			}
 		}
-		if (protectionDomain == null) {
-			protectionDomain = PROTECTION_DOMAIN;
-		}
+
+		// Direct defineClass attempt on the target Classloader
 		if (c == null) {
-			if (classLoaderDefineClassMethod != null) {
+			if (protectionDomain == null) {
+				protectionDomain = PROTECTION_DOMAIN;
+			}
+
+			// Look for publicDefineClass(String name, byte[] b, ProtectionDomain protectionDomain)
+			try {
+				Method publicDefineClass = loader.getClass().getMethod(
+						"publicDefineClass", String.class, byte[].class, ProtectionDomain.class);
+				c = (Class) publicDefineClass.invoke(loader, className, b, protectionDomain);
+			}
+			catch (InvocationTargetException ex) {
+				if (!(ex.getTargetException() instanceof UnsupportedOperationException)) {
+					throw new CodeGenerationException(ex.getTargetException());
+				}
+				// in case of UnsupportedOperationException, fall through
+				t = ex.getTargetException();
+			}
+			catch (Throwable ex) {
+				// publicDefineClass method not available -> fall through
+				t = ex;
+			}
+
+			// Classic option: protected ClassLoader.defineClass method
+			if (c == null && classLoaderDefineClassMethod != null) {
 				Object[] args = new Object[]{className, b, 0, b.length, protectionDomain};
 				try {
 					if (!classLoaderDefineClassMethod.isAccessible()) {
@@ -526,13 +557,47 @@ public class ReflectUtils {
 					throw new CodeGenerationException(ex.getTargetException());
 				}
 				catch (Throwable ex) {
-					throw new CodeGenerationException(ex);
+					// Fall through if setAccessible fails with InaccessibleObjectException on JDK 9+
+					// (on the module path and/or with a JVM bootstrapped with --illegal-access=deny)
+					if (!ex.getClass().getName().endsWith("InaccessibleObjectException")) {
+						throw new CodeGenerationException(ex);
+					}
+					t = ex;
 				}
 			}
-			else {
-				throw new CodeGenerationException(THROWABLE);
+		}
+
+		// Fallback option: JDK 9+ Lookup.defineClass API even if ClassLoader does not match
+		if (c == null && contextClass != null && contextClass.getClassLoader() != loader &&
+				privateLookupInMethod != null && lookupDefineClassMethod != null) {
+			try {
+				MethodHandles.Lookup lookup = (MethodHandles.Lookup)
+						privateLookupInMethod.invoke(null, contextClass, MethodHandles.lookup());
+				c = (Class) lookupDefineClassMethod.invoke(lookup, b);
+			}
+			catch (InvocationTargetException ex) {
+				throw new CodeGenerationException(ex.getTargetException());
+			}
+			catch (IllegalAccessException ex) {
+				throw new CodeGenerationException(ex) {
+					@Override
+					public String getMessage() {
+						return "ClassLoader mismatch for [" + contextClass.getName() +
+								"]: JVM should be started with --add-opens=java.base/java.lang=ALL-UNNAMED " +
+								"for ClassLoader.defineClass to be accessible on " + loader.getClass().getName();
+					}
+				};
+			}
+			catch (Throwable ex) {
+				throw new CodeGenerationException(ex);
 			}
 		}
+
+		// No defineClass variant available at all?
+		if (c == null) {
+			throw new CodeGenerationException(t);
+		}
+
 		// Force static initializers to run.
 		Class.forName(className, true, loader);
 		return c;
@@ -569,10 +634,6 @@ public class ReflectUtils {
 
 			public Type[] getExceptionTypes() {
 				return ReflectUtils.getExceptionTypes(member);
-			}
-
-			public Attribute getAttribute() {
-				return null;
 			}
 		};
 	}
